--- a/Home.html
+++ b/Home.html
@@ -32,6 +32,7 @@
         <p>Umur: 17 Tahun</p>
         <p>Sekolah: SMK Wikrama Bogor</p>
         <p>Jurusan: TJKT</p>
+        <href="web2.html">klik</href>
     </div>
 </body>
 </html>
