--- a/web2.html
+++ b/web2.html
@@ -43,6 +43,6 @@
             <p>Jurusan: TJKT</p>
         </div>
     </div>
-    <href="Home.html">kembali</href>
+    <a href="Home.html">kembali</a>
 </body>
 </html>
