--- a/Home.html
+++ b/Home.html
@@ -33,5 +33,6 @@
         <p>Sekolah: SMK Wikrama Bogor</p>
         <p>Jurusan: TJKT</p>
     </div>
+     <a href="web2.html">klik</a>
 </body>
 </html>
