--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,6 @@
         <p>Umur: 17 Tahun</p>
         <p>Sekolah: SMK Wikrama Bogor</p>
         <p>Jurusan: TJKT</p>
-    </div>
-<a href="web2.html">klik</a>
+    </div> <a href="web2.html">klik</a>
 </body>
 </html>
