--- a/web2.html
+++ b/web2.html
@@ -43,6 +43,6 @@
             <p>Jurusan: TJKT</p>
         </div>
     </div>
-<a href="web3.html"></klik</a>
+<a href="web3.html">klik</a>
 </body>
 </html>
