--- a/web3.html
+++ b/web3.html
@@ -45,6 +45,6 @@
             <p>Jurusan: TJKT</p>
         </div>
     </div>
-    <a href="Home.html"></klik</a>
+    <a href="Home.html">klik</a>
 </body>
 </html>
