--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
         <p>Umur: 17 Tahun</p>
         <p>Sekolah: SMK Wikrama Bogor</p>
         <p>Jurusan: TJKT</p>
-        <a href="web2.html">klik</a>
+        <ul ><li><a href="web2.html">klik</a></li></ul>
     </div> 
 
 </body>
